--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
   </div>
 </div>
   <div class="menu-container">
-    <div class="menu-item"><a href="#" onclick='location.href="http://127.0.0.1:5500/%EB%A9%94%EC%9D%B8%ED%8E%98%EC%9D%B4%EC%A7%80/%EB%A1%9C%EA%B7%B8%EC%9D%B8%ED%8E%98%EC%9D%B4%EC%A7%80/%EB%A1%9C%EA%B7%B8%EC%9D%B8/%EB%A1%9C%EA%B7%B8%EC%9D%B8.html#"'>로그인 / 회원가입</a></div>
-    <div class="menu-item"><a href="#" onclick='location.href="http://127.0.0.1:5500/%EB%A9%94%EC%9D%B8%ED%8E%98%EC%9D%B4%EC%A7%80/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80/mypage.html"'>마이페이지</a></div>
-    <div class="menu-item"><a href="#" onclick='location.href="http://127.0.0.1:5500/%EB%A9%94%EC%9D%B8%ED%8E%98%EC%9D%B4%EC%A7%80/%EB%A6%AC%EB%B7%B0%ED%8E%98%EC%9D%B4%EC%A7%80/%EB%A6%AC%EB%B7%B0%ED%8E%98%EC%9D%B4%EC%A7%80.html"'>Review</a></div>
+    <div class="menu-item"><a href="./로그인페이지/로그인/로그인.html" >로그인 / 회원가입</a></div>
+    <div class="menu-item"><a href="./마이페이지/mypage.html" >마이페이지</a></div>
+    <div class="menu-item"><a href="./리뷰페이지/리뷰페이지.html">Review</a></div>
     <!-- 필요한 만큼 메뉴 항목을 추가할 수 있습니다. -->
   </div>
   <div id='footer_main' >
